# Multi-Agent-Custom-Automation-Engine-Solution-Accelerator

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .gitignore
.auto-claude/specs/001-deploy/: build-progress.txt  complexity_assessment.json  context.json  critique_report.json  implementation_plan.json  init.sh  project_index.json  qa_report.md  requirements.json  research.json  review_state.json  spec.md  task_logs.json
.github/workflows/: rfp-radar-deploy.yml
.specstory/history/: 2026-02-03_00-38Z-call-state,-chat,-and-appointment-issues.md
infra/modules/: rfp-radar-job.bicep
src/demo-frontend/: .gitignore  next.config.js  openmemory.md  package-lock.json  package.json  tailwind.config.cjs
src/demo-frontend/app/: globals.css  layout.tsx  page.tsx
src/demo-frontend/components/: AppointmentCalendar.tsx  CallButton.tsx  ChatInterface.tsx  StatsCards.tsx
src/demo-frontend/lib/: branding.ts
src/leadgen/: __init__.py  config.py  main.py  orchestrator.py  requirements.txt
src/leadgen/agents/: __init__.py  frontend_deployer_agent.py  research_agent.py  sales_agent.py  scraper_agent.py  voice_assembler_agent.py
src/rfp_radar/: .dockerignore  Dockerfile  __init__.py  classifier.py  config.py  digest_builder.py  llm_client.py  logging_utils.py  main.py  models.py  proposal_generator.py  pyproject.toml  requirements.txt  search_client.py  slack_client.py  storage_client.py
src/rfp_radar/scrapers/: __init__.py  base.py  bidnet.py  govtribe.py  opengov.py
src/rfp_radar/tests/: __init__.py  test_classifier.py  test_config.py  test_digest_builder.py  test_models.py  test_proposal_generator.py  test_scrapers.py
src/voice-server/: __init__.py  audio_proxy.py  main.py  requirements.txt
tests/leadgen/: __init__.py  test_dossier.py  test_email_template.py  test_lead_dedup.py  test_revenue_heuristics.py
(+65 files in other folders)
